fixed text spacing problem

--- a/svija/templates/svija/css/svija.css
+++ b/svija/templates/svija/css/svija.css
@@ -33,6 +33,7 @@ svg{
 
 * {
   box-sizing: border-box; /* width & height include padding & borders */
+  text-rendering: geometricPrecision;
 }
 
 pre#noscript, pre#nocookie, pre#explorer{
